# cocaine-framework-java

./: .gitignore  CMakeLists.txt  README  README.md  archetype-catalog.xml  build.xml  ivy.xml  pom.xml
benchmark/java/cocaine/: AsyncServiceSessionBenchmark.java
cocaine-client/: README.md  pom.xml
cocaine-client-archetype/: README.md  pom.xml
cocaine-client-archetype/src/main/resources/archetype-resources/: pom.xml
cocaine-client/src/main/java/cocaine/: Locator.java  Service.java  ServiceApi.java  ServiceErrorException.java  ServiceException.java  ServiceInfo.java  ServiceInstantiationException.java  Sessions.java  UnexpectedMessageException.java  UnexpectedServiceMessageException.java  UnknownMethodException.java  UnknownServiceMethodException.java
cocaine-client/src/test/java/cocaine/: ServiceSessionTest.java
cocaine-core/: README.md  pom.xml
cocaine-examples/: pom.xml
cocaine-services/: README.md  pom.xml
cocaine-worker/: README.md  pom.xml
cocaine-worker-archetype/: README.md  pom.xml
cocaine-worker/src/main/resources/: names.txt
debian/: changelog  changelog~  control  copyright  libcocaine-java-doc.javadoc  libcocaine-java.jlibs  rules
src/main/cpp/: client.cpp  dealer.cpp  response.cpp  response_holder.hpp  util.cpp  util.hpp
src/main/cpp/impl/: client.cpp
src/main/cpp/include/: client.hpp  response_holder.hpp
src/main/java/: log4j.xml
src/main/java/cocaine/: AsyncServiceResponse.java  AsyncServiceSession.java  CocaineException.java  CocaineServlet.java  CocaineServletRequest.java  CocaineServletResponse.java  Locator.java  LocatorResolveException.java  Main.java  Service.java  ServiceException.java  ServiceInfo.java  ServiceResponseHolder.java  ServiceSession.java  ServiceSessions.java  Services.java  SessionFuture.java  Sessions.java  SyncServiceSession.java  Worker.java  WorkerOptions.java
src/test/resources/: __init__.py  cocaine.conf  dealer_config.json  deploy_app.sh  init_cocaine.sh  perl_test1.app.manifest  python_test1.app.manifest  run_and_track_client.sh  run_client.sh  run_cocaine.sh  start_cocaine.sh  test.pl
(+163 files in other folders)
